--- a/app/css/app.scss
+++ b/app/css/app.scss
@@ -1,3 +1,12 @@
+$primary-color: rgb(255,0,0);
+
+@import 'vendor/semantic-ui';
+// @import 'vendor/semantic-ui/globals/all';
+// @import 'vendor/semantic-ui/elements/list';
+// @import 'vendor/semantic-ui/elements/icon';
+// @import 'vendor/semantic-ui/elements/button';
+
+
 #app{
-  color: red;
+  color: $primary-color;
 }
