Added autoprefixer :wrench:

--- a/app/css/app.scss
+++ b/app/css/app.scss
@@ -9,4 +9,7 @@ $primary-color: rgb(255,140,0);
 
 #app{
   color: $primary-color;
+  border-radius: 100%;
+  background-color: blue;
+  transition: transform 1s;
 }
